# lotus

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  README.md  ROADMAP.md  conanfile.txt  setup.bat  setup.sh
docs/: CMakeLists.txt  Doxyfile.in  conf.py  configure.cmake  index.md  index.rst  install.rst  requirements.txt
docs/_manuals/: install.rst  renderer.rst
docs/manual/: ecs.rst  importing.rst  install.rst  quickstart.rst  thirdparty.rst
editor/: CMakeLists.txt  imgui.ini
editor/resources/fonts/: LICENSE.txt  LICENSES
editor/resources/scenes/: blank.json
editor/src/: EditorCamera.cpp  EditorCamera.h  Input.h  ModuleLoader.cpp  ModuleLoader.h  WindowManager.cpp  WindowManager.h  config.h  events.h  gizmos.cpp  gizmos.h  main.cpp  panels.hpp  utils.cpp  utils.h  widgets.cpp  widgets.h
editor/src/panels/: log.hpp  mainmenu.hpp
editor/src/ui/: panels.hpp
editor/src/widgets/: control.cpp  log.cpp  mainmenu.cpp  properties.hpp  scenetree.cpp  viewport.cpp
editor/src/window/: UIPass.h  Window.cpp  Window.h  imgui_impl_glfw.cpp
editor/src/window/backends/: imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
examples/pong/: .lproject  CMakeLists.txt
examples/pong/include/: pong_export.h
examples/pong/resources/materials/: default.json  gold.json
examples/pong/resources/scenes/: Main.scene
examples/pong/src/: pong.cpp
examples/quickstart/: .lproject  CMakeLists.txt  CameraSystem.hpp  ClosedRoomScene.hpp  PBR.hpp  SkyboxScene.hpp  main.cpp
examples/quickstart/include/: quickstart.h  quickstart_export.h
examples/quickstart/resources/materials/: backpack.json  box.json  default.json  gold.json  green.json  mud.json  pbr.json  plane.json  red.json  sphere.json  wall.json
examples/quickstart/resources/mesh/: Backpack.fbx  plane.fbx  plane.json  plane.mtl  sphere.fbx  sphere.json  untitled.json  untitled.mtl
examples/quickstart/resources/prefabs/: paddle.json  pointlight.json
examples/quickstart/resources/recipe/: AActor.json  camera.json  pointlight.json
examples/quickstart/resources/scenes/: DebugScene.json  MaterialDisplay.json  SampleScene.json  out.scene
examples/quickstart/resources/scripts/: hello.py
examples/quickstart/resources/shaders/: diffuse.frag  diffuse.fsh  emission.fsh  skybox.fsh  skybox.vsh  standard.vert  standard.vsh
examples/quickstart/src/: GameCamera.cpp  GameCamera.h  quickstart.cpp
lotus/: CMakeLists.txt  lotus.cpp
lotus/docs/: CMakeLists.txt  Doxyfile.in  README.md  conf.py  index.rst
lotus/docs/_manuals/: ecs.rst  install.rst
lotus/docs/_static/css/: navbar.css
lotus/docs/manual/: importing.rst
lotus/include/: GLRenderer.h  GLShader.h  GLWindow.h
lotus/include/glad/: glad.h
lotus/include/lotus/: Config.h  Engine.h  ILifecycle.h  Input.h  Renderer.h  debug.h  entry.h  filesystem.h  lcommon.h  lotus.h  lotus_export.h  python.h  serialization.h  utility.h
lotus/include/lotus/components/: lights.h  rendering.h
lotus/include/lotus/ecs/: AActor.h  ACamera.h  ComponentFactory.h  ComponentRegistry.h  Entity.h  EntityRegistry.h  Event.h  EventManager.h  IComponentInfo.h  ISystem.h  Recipe.h
lotus/include/lotus/events/: EventManager.h  IWindow.h  Input.h
lotus/include/lotus/physics/: CollisionEvent.h  Vector.h  components.h  physics.h
lotus/include/lotus/rendering/: CMeshRenderer.h  RenderPass.h  common.h
lotus/include/lotus/resources/: AssetRegistry.h  Cubemap.h  HDRI.h  Material.h  Model.h  Shader.h  Texture.h
lotus/include/lotus/scene/: AActor.h  ACamera.h  Scene.h  SceneManager.h  SceneTreeNode.h
lotus/include/rendering/: GLRenderer.h  IRenderer.h  Window.h
lotus/rendering/: Shader.cpp  debug.hpp
lotus/rendering/directx/: DxRenderer.cpp
lotus/rendering/opengl/: GLRenderer.cpp
lotus/rendering/vulkan/: VkRenderer.cpp
lotus/resources/: AssetManager.cpp  Mesh.cpp  Model.cpp  Texture.cpp  cube.mtl  untitled.mtl
lotus/resources/mesh/: cube.fbx
lotus/resources/shaders/: convolution.frag  pbr.frag  pbr.vert  skybox.frag
lotus/scene/: Actor.cpp  Camera.cpp  Scene.cpp
lotus/shaders/: convolution.vert
lotus/src/: Engine.cpp  Object.cpp  debug.cpp  engine.cpp  filesystem.cpp  lotus.cpp
lotus/src/core/: ComponentRegistry.cpp  Config.cpp  Engine.cpp  Engine.h  GLFW_WindowManagerImpl.cpp  IWindow.cpp  IWindow.h  Input.cpp  Scene.cpp  SubsystemManager.cpp  SubsystemManager.h  SystemRegistry.cpp  SystemRegistry.h  WindowManager.h
lotus/src/core/components/: Actor.cpp  MeshComponent.cpp  Object.cpp
lotus/src/core/platform/: DXWindow.cpp  DXWindow.h  GLWindow.cpp  GLWindow.h
lotus/src/ecs/: AActor.cpp  ACamera.cpp  ComponentRegistry.cpp  Entity.cpp  Recipe.cpp  SystemRegistry.cpp  SystemRegistry.h
lotus/src/events/: Event.cpp  EventDispatcher.cpp  GLWindow.cpp  GLWindow.h  Input.cpp
lotus/src/physics/: BulletImpl.cpp  BulletImpl.h  Physics.cpp  Physics.h  PhysicsInfo.h  PhysicsSubsystem.cpp  PhysicsSubsystem.h  PxImpl.cpp  PxImpl.h
lotus/src/physics/math/: operations.cpp
lotus/src/python/: Interpreter.cpp  Interpreter.h  module.cpp
lotus/src/rendering/: AModel.cpp  Camera.cpp  GLRenderer.cpp  LShader.cpp  Mesh.cpp  Model.cpp  Primitives.cpp  Primitives.h  RHI.cpp  RHI.h  RenderPass.h  RenderQueue.h  Renderer.cpp  Renderer.h  Shader.cpp  Window.cpp
lotus/src/rendering/debug/: ShaderHotReload.cpp  ShaderHotReload.h
lotus/src/rendering/opengl/: GLShader.h  (+8 more)
lotus/src/resources/: AssetManager.cpp  AssetRegistry.cpp  Cubemap.cpp  HDRI.cpp  Material.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp
lotus/src/scene/: AActor.cpp  ACamera.cpp  Actor.cpp  Camera.cpp  Scene.cpp  SceneManager.cpp  SceneTreeNode.cpp
lotus/src/shaders/: loadHDRI.frag  shadow.vert
lotus/src/tools/: GUI.cpp  logger.cpp
lotus/src/ui/: GLUIRenderBackend.cpp  GUI.cpp  VkUIRenderBackend.cpp
lotus/tests/: CMakeLists.txt  Config.cpp  doctest.h  filesystem.cpp
lotus/tests/data/: test.lproject
lotus/tools/: GLUIRenderBackend.cpp  GUI.h  UIRenderBackend.h
tools/buildtool/: CMakeLists.txt
tools/buildtool/src/: main.cpp
(+85 files in other folders)
